Use `exec(String[])` instead of `exec(String)`