@@ -217,7 +217,7 @@ public class TraceSelect {
 
         // cleanup the mess
         if (CLEAN) {
-          Runtime.getRuntime().exec("rm " + filePrefix);
+          Runtime.getRuntime().exec(new String[] {"rm", filePrefix});
         }
 
         num_reps--;
@@ -234,7 +234,7 @@ public class TraceSelect {
       // cleanup the mess!
       for (int j = 0; j < sampleNames.length; j++) {
         if (CLEAN) {
-          Runtime.getRuntime().exec("rm " + sampleNames[j]);
+          Runtime.getRuntime().exec(new String[] {"rm", sampleNames[j]});
         }
       }
 
@@ -269,8 +269,13 @@ public class TraceSelect {
     // initializes daikon again or else an exception is thrown
     reinitializeDaikon();
     daikon.Daikon.main(daikonArgs);
-    Runtime.getRuntime()
-        .exec("java daikon.PrintInvariants " + dtraceName + ".inv > " + dtraceName + ".txt");
+    // Run: java daikon.PrintInvariants dtraceName.inv > dtraceName.txt
+    ProcessBuilder pb = new ProcessBuilder("java", "daikon.PrintInvariants", dtraceName + ".inv");
+    Map<String, String> env = pb.environment();
+    File log = new File("log");
+    pb.redirectOutput(dtraceName + ".txt");
+    Process p = pb.start();
+    p.waitFor();
 
     return;
   }
